4.x/apps/Calculator-Spring-Boot-copy/eventprocessor/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eventprocessor
  name: eventprocessor
  namespace: <PROJECT>
spec:
  ports:
  - name: 8007-tcp
    port: 8007
    protocol: TCP
    targetPort: 8007
  selector:
    app: eventprocessor
  type: ClusterIP
